started working on contact form and fixed the input box alignment, makign it align left

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -116,7 +116,6 @@ form textarea {
 
 .form-group input {
     display: block;
-    margin: 0 auto;
 }
 /******************************end form**************************************************************/
 
